--- a/index.html
+++ b/index.html
@@ -347,24 +347,13 @@
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_next" value="submit.html">
                 <div class="col-12">
-                  <button class="btn btn-outline-danger" id="btn1" type="submit" onclick="thanks()">Submit</button>
+                  <button class="btn btn-outline-danger" id="btn1" type="submit">Submit</button>
                 </div>
               </form>
               </div>
         </section>
 
     </main>
-    <script>
-      /*
-      function thanks(){
-        Swal.fire({
-          title: "Good job!",
-          text: "You clicked the button!",
-          icon: "success"
-        });
-      }
-      */
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
