--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                   </div>
                 </div>
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="submit.html">
+                <input type="hidden" name="_next" value="https://hillal-titouh-portfolio.netlify.app/submit.html">
                 <div class="col-12">
                   <button class="btn btn-outline-danger" id="btn1" type="submit">Submit</button>
                 </div>
